# CafeAssistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Workshop_7_Production_Agent_Demo.ipynb  app.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: booking_flow_redesign.md
taste_agent/: config.py  orchestrator.py  prompts.py  skill_loader.py
taste_agent/browser/: __init__.py  backend.py  parser_cache.py  pool.py  spec_cache.py  specs.py  sub_agent.py  tools.py
taste_agent/guardrails/: __init__.py  action.py  input.py  output.py
taste_agent/logging_/: __init__.py  debug.py  hierarchical.py
taste_agent/memory/: __init__.py  _session.py  derive.py  episodic.py  gating.py  procedural.py  reflection.py  schemas.py  semantic.py  writes.py
taste_agent/prompts/: README.md  __init__.py  browser_discovery.txt  browser_subagent.txt  derive_patterns.txt  orchestrator.txt  output_judge.txt  reflect.txt
taste_agent/skills/memorize/: SKILL.md  memorize.py
taste_agent/skills/places_search/: SKILL.md  places_search.py
taste_agent/skills/reserve_table/: SKILL.md  reserve_table.py
taste_agent/tools/: __init__.py  discover_booking_flow.py  geocode.py  memory_read.py  memory_search.py  place_discovery.py  place_web_fallback.py  web_search.py
tests/: conftest.py  fakes.py  test_action_guardrail.py  test_app.py  test_browser_backend.py  test_browser_tools.py  test_derive.py  test_discover_booking_flow.py  test_episodic_memory.py  test_guardrails_input.py  test_integration.py  test_logging.py  test_memorize.py  test_memory_gating.py  test_memory_tools.py  test_orchestrator.py  test_orchestrator_approval.py  test_output_guardrails.py  test_parser_cache.py  test_place_discovery.py  test_place_web_fallback.py  test_places_search.py  test_procedural_memory.py  test_reflection.py  test_reserve_table.py  test_semantic_memory.py  test_session_scoping.py  test_skill_loader.py  test_spec_cache.py  test_web_search.py  test_writes.py
