[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-agent"
version = "0.1.0"
description = "Personalized restaurant recommender + reservation agent (Seminar 7 capstone)"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.102.0",
    "openai==2.30.0",
    "google-genai==1.68.0",
    "mistralai==2.1.3",
    "langchain==1.2.14",
    "langchain-core==1.2.29",
    "langgraph==1.1.6",
    "langchain-litellm==0.6.4",
    "litellm==1.83.4",
    "tavily-python==0.7.24",
    "chromadb==1.5.6",
    "langchain-chroma==1.1.0",
    "opentelemetry-api==1.39.1",
    "langchain-huggingface==1.2.1",
    "sentence-transformers==5.3.0",
    "gradio==6.14.0",
    "playwright==1.59.0",
    "python-dotenv==1.0.1",
    "pydantic==2.12.5",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.12",
]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — linter + formatter
# Run:
#   ruff check production_system/
#   ruff format production_system/
# ──────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv", "__pycache__"]

[tool.ruff.lint]
# Curated rule set. Keep it tight enough to be useful, not so strict it
# burns the seminar budget on noqa golf.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "B",   # flake8-bugbear (common bug patterns)
    "UP",  # pyupgrade (modernize syntax)
    "N",   # pep8-naming
    "T20", # flake8-print — bans print(); CLAUDE.md requires the hierarchical logger
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # use pathlib over os.path
    "ARG", # unused arguments
    "RUF", # ruff-specific rules
]

ignore = [
    "E501",   # line-too-long is enforced by the formatter
    "B008",   # function calls in default args (FastAPI/Depends, Pydantic Field idioms)
    "SIM108", # ternary preference — can hurt readability
    "N806",   # variable-in-function names — too noisy for ML/LangChain code (State, Messages, etc.)
    "ARG002", # unused method args — common in LangGraph node signatures (state, config)
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports trip unused-import otherwise.
"__init__.py" = ["F401"]
# Tests get more leeway: bare asserts, longer test names, magic numbers.
"tests/**/*.py" = ["ARG001", "ARG002", "N802", "PLR2004"]
# Notebooks (if any) — let them print.
"*.ipynb" = ["T201", "T203"]

[tool.ruff.lint.isort]
known-first-party = ["taste_agent"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# ──────────────────────────────────────────────────────────────────────────────
# Pytest
# Run:
#   pytest production_system/tests/ -v
# ──────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",            # short summary for all non-pass outcomes
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: end-to-end tests that exercise the full pipeline (LLM calls mocked)",
    "slow: tests that take more than a second",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:langchain.*",
    "ignore::DeprecationWarning:pydantic.*",
]
